--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "dependencies": {
-    "docpad": "^6.69.1"
+    "docpad": "~6.69.1",
+    "docpad-plugin-highlightjs": "~2.3.0",
+    "docpad-plugin-marked": "~2.2.1"
   },
   "devDependencies": {},
   "scripts": {
