--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,11 @@ indent_size               = 4
 indent_style              = space
 insert_final_newline      = false
 trim_trailing_whitespace  = true
+
+[package.json]
+charset                   = utf-8
+end_of_line               = lf
+indent_size               = 2
+indent_style              = tab
+insert_final_newline      = false
+trim_trailing_whitespace  = true
