--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-    "private": true,
-    "dependencies": {
-        "docpad": "~6.69.1",
-        "docpad-plugin-eco": "~2.1.0",
-        "docpad-plugin-highlightjs": "~2.3.0",
-        "docpad-plugin-marked": "~2.2.1",
-        "docpad-plugin-partials": "~2.9.1"
-    },
-    "devDependencies": {
-        "grunt": "^0.4.5",
-        "grunt-contrib-cssmin": "^0.10.0",
-        "load-grunt-tasks": "^1.0.0"
-    },
-    "scripts": {
-        "build": "docpad generate --env static",
-        "deploy": "docpad deploy-ghpages --env static",
-        "test": "docpad generate --silent",
-        "watch": "docpad run --silent"
-    }
+  "private": true,
+  "dependencies": {
+    "docpad": "~6.69.1",
+    "docpad-plugin-eco": "~2.1.0",
+    "docpad-plugin-grunt": "~2.1.1",
+    "docpad-plugin-highlightjs": "~2.3.0",
+    "docpad-plugin-marked": "~2.2.1",
+    "docpad-plugin-partials": "~2.9.1"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.10.0",
+    "load-grunt-tasks": "^1.0.0"
+  },
+  "scripts": {
+    "build": "docpad generate --env static",
+    "deploy": "docpad deploy-ghpages --env static",
+    "test": "docpad generate --silent",
+    "watch": "docpad run --silent"
+  }
 }
