--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-less": "^1.0.0",
     "load-grunt-tasks": "^1.0.0"
   },
   "scripts": {
