--- a/.editorconfig
+++ b/.editorconfig
@@ -17,3 +17,11 @@ indent_size               = 2
 indent_style              = tab
 insert_final_newline      = false
 trim_trailing_whitespace  = true
+
+[bower.json]
+charset                   = utf-8
+end_of_line               = lf
+indent_size               = 2
+indent_style              = tab
+insert_final_newline      = false
+trim_trailing_whitespace  = true
